Bug 123419 - Scrolling around in a document with lots of comment shown very slow compared to 4.4.7.2
Summary: Scrolling around in a document with lots of comment shown very slow compared ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: regression
Depends on:
Blocks: Calc-Comments Scrolling-PageUpDown
  Show dependency treegraph
 
Reported: 2019-02-12 20:04 UTC by Telesto
Modified: 2025-09-25 15:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-02-12 20:04:12 UTC
Description:
Scrolling around in a document with lots of comment shown very slow compared to 4.4.7.2

Steps to Reproduce:
1. Open attachment 144526 [details] (bug 119075)
2. View -> Show comments
3. Scroll around

Actual Results:
Very slow

Expected Results:
Smooth like 4.4.7.2


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 0b21f6556b6fff76290d1095089da89532365215
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-02-12 20:31:47 UTC
Also with
Version: 6.3.0.0.alpha0+
Build ID: e0745a11597e5d57eb8001a295314e86810a6027
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-02-12_04:16:22
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 2 Roman Kuznetsov 2019-02-13 09:36:15 UTC
confirm in

Версия: 6.2.0.3
ID сборки: 98c6a8a1c6c7b144ce3cc729e34964b47ce25d62
Потоков ЦП: 4; ОС:Windows 6.1; Отрисовка ИП: по умолчанию; VCL: win; 
Локаль: ru-RU (ru_RU); UI-Language: ru-RU
Calc: threaded
Comment 3 Timur 2019-02-13 12:42:17 UTC
Please explain why you opened a separate bug for the same document? 
The original also says "Slow scrolling". Can be added that it also happens on just fileopen.
Comment 4 Telesto 2019-02-13 13:06:35 UTC
(In reply to Timur from comment #3)
> Please explain why you opened a separate bug for the same document? 
> The original also says "Slow scrolling". Can be added that it also happens
> on just fileopen.

The initial report is talking about GTK2/ GTK3 difference nobody did confirm it.. so don't gonna spam that one with this..

I created 3 separate reports for this bug doc:
1. Slow file opening (compared to 4.4.7.2)
2. Slow opening of all the comment (compared to 4.4.7.2)
3. Laggy scrolling with all comment boxes open compared to 4.4.7.2)

I expect 2-3 to be related (but without bibisect impossible to say for sure). Bug 1 is probably something else..
Comment 5 Buovjaga 2020-06-06 11:25:35 UTC
Telesto: I have a problem: in 4.4, 5.0, 5.1 there is no "View - Comments". So how can I test and compare this?
Comment 6 Carlo 2021-09-29 21:59:24 UTC
confirm in
Version: 7.2.2.1 (x64) / LibreOffice Community
Build ID: 0e408af0b27894d652a87aa5f21fe17bf058124c
CPU threads: 12; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded

After View -> Comments it almost impossible to scroll

Sheet 1 is completely full of comments and many cells are covered... is it a real problem in real life?
Comment 7 Commit Notification 2022-10-27 08:50:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab83d7d57d0fae106037b12651adb397b48354e4

tdf#123419 using glyph cache for drawinglayer rendering

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-10-27 08:58:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/551e5943d4bec10c31077f38ccf5d8149c05265c

tdf#123419 optimise ImplMakeFraction

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-11-28 10:12:52 UTC
Chris Sherlock committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/845dd688e5032c83db889cbf2ca033144dd1de32

tdf#123419 vcl: remove unneeded ImplMakeFraction() in map.cxx

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 QA Administrators 2024-11-28 03:12:51 UTC Comment hidden (obsolete)
Comment 11 Buovjaga 2025-05-26 13:42:32 UTC
Has anyone tested this lately? With the oldest commit of 7.4 Linux bibisect repo, I get 3.5 sec delays per scrollbar position refresh when dragging the scrollbar. With 25.2 the lag is not even 0.5 sec (impossible to measure with stopwatch).
Comment 12 Buovjaga 2025-09-25 15:28:41 UTC
(In reply to Buovjaga from comment #11)
> Has anyone tested this lately? With the oldest commit of 7.4 Linux bibisect
> repo, I get 3.5 sec delays per scrollbar position refresh when dragging the
> scrollbar. With 25.2 the lag is not even 0.5 sec (impossible to measure with
> stopwatch).

Good news: with the latest master on Linux and Windows, the lag is basically gone! I double-checked with 25.2 Win & Linux to be sure I still saw the 0.5 sec lag in those.

Changing to fixed as this has commits.

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5effa8d0977ac9ce13a8e66cbd2302e585c41c6d
CPU threads: 8; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 22 September 2025

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8023d9a3c1938ecc5448799bcf8fac9d71758ddb
CPU threads: 2; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded